// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders RTL styling 1`] = `
<input
  className="Input-hxTtdt c-txt__input is-rtl eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders bare styling if provided 1`] = `
<input
  className="Input-hxTtdt c-txt__input c-txt__input--bare eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders default styling 1`] = `
<input
  className="Input-hxTtdt c-txt__input eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders disabled styling if provided 1`] = `
<input
  className="Input-hxTtdt c-txt__input is-disabled eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
  disabled={true}
/>
`;

exports[`Input renders focused styling if provided 1`] = `
<input
  className="Input-hxTtdt c-txt__input is-focused eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders hovered styling if provided 1`] = `
<input
  className="Input-hxTtdt c-txt__input is-hovered eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders media layout styling if provided 1`] = `
<input
  className="Input-hxTtdt c-txt__input c-txt__input--media eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders open styling if provided 1`] = `
<input
  className="Input-hxTtdt c-txt__input is-open eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
  open={true}
/>
`;

exports[`Input renders select styling if provided 1`] = `
<input
  className="Input-hxTtdt c-txt__input c-txt__input--select eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders small styling if provided 1`] = `
<input
  className="Input-hxTtdt c-txt__input c-txt__input--sm eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input renders tag layout styling if provided 1`] = `
<input
  className="Input-hxTtdt c-txt__input c-txt__input--tag eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input validation renders error styling if provided 1`] = `
<input
  className="Input-hxTtdt c-txt__input c-txt__input--error eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input validation renders success styling if provided 1`] = `
<input
  className="Input-hxTtdt c-txt__input c-txt__input--success eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;

exports[`Input validation renders warning styling if provided 1`] = `
<input
  className="Input-hxTtdt c-txt__input c-txt__input--warning eyZowq"
  data-garden-id="textfields.input"
  data-garden-version="version"
/>
`;
